# scdoc

./: .build.yml  .gitignore  Makefile  README.md  meson.build  scdoc.1.scd  scdoc.5.scd  scdoc.pc  scdoc.pc.in
contrib/: _incr_version
include/: str.h  util.h
src/: main.c  string.c  utf8_fgetch.c  util.c
test/: indent  inline-formatting  lib.sh  line-breaks  preamble
